<resources>
    <string name="app_name">Aston_Rick_And_Morty</string>
    <string name="name_unknown">Name unknown</string>
    <string name="species_unknown">Species unknown</string>
    <string name="gender_unknown">Gender unknown</string>
    <string name="status_unknown">Status unknown</string>

    <string name="moved_back">Перешли назад с экрана деталей персонажа</string>

<!--    -->

    <string name="locations">Locations</string>
    <string name="episodes_item">ep.1:</string>
    <string name="search_character">Search character</string>
    <string name="reset">Reset</string>
    <string name="human">Human</string>
    <string name="rick_sanchez">Rick Sanchez</string>
    <string name="tvTitleFilter">Filter</string>
    <string name="characters">Characters</string>
    <string name="filter_status">Status</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="gender">Gender</string>
    <string name="apply">apply</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="unknown">Unknown</string>
    <string name="genderless">Genderless</string>
    <string name="status">Status:</string>
    <string name="specie">Specie:</string>
    <string name="gender_c">Gender:</string>
    <string name="origin">Origin:</string>
    <string name="episodes">Episodes</string>
    <string name="date">Date:</string>
    <string name="earth">Earth</string>
    <string name="planet">Planet</string>
    <string name="dimension_c_137">Dimension C-137</string>
    <string name="purge_planet">Purge Planet</string>
    <string name="type">Type:</string>
    <string name="dimensions">Dimensions:</string>
    <string name="residents">Residents</string>
    <string name="the_ricklantis_mixup">The Ricklantis Mixup</string>
    <string name="air_date_september_10_2017">Air date: September 10, 2017</string>
    <string name="episode_s03e07">Episode: S03E07</string>
    <string name="episode_name">Episode name</string>
    <string name="last_location">Last location:</string>
    <string name="choose_the_type_or_subspecies_n_of_the_character">Choose the type of the character</string>
    <string name="choose_the_species_nof_the_character">Choose the species\nof the character.</string>
    <string name="select_series">Select series</string>
    <string name="select_type">Select type</string>
    <string name="select_dimension">Select dimension</string>
    <string name="search_episode">Search episode</string>
    <string name="search_location">Search Location</string>
    <string name="empty"> </string>
    <!--    -->
    <string name="btn_back_text">Back</string>
    <string name="character_name">Character name</string>
    <string name="character_status">Character status</string>
    <string name="character_type">Character type</string>
    <string name="character_species">Character specie</string>
    <string name="character_gender">Character gender</string>
    <string name="character_origin">Character origin</string>
    <string name="character_location">Character location</string>
    <string name="episodes_with_this_character">Episodes with this character:</string>
    <string name="character_information">Character information:</string>
    <string name="episode_code">Episode code</string>
    <string name="air_date">Air date</string>
    <string name="filter">Filter</string>
    <string name="all_character_list">All character list:</string>
    <string name="choose_species">Choose species</string>
    <string name="choose_type">Choose type</string>
    <string name="all_episode_list">All episode list:</string>
    <string name="all_characters_in_this_episode">All characters in this episode:</string>
    <string name="choose_episode">Choose episode</string>
    <string name="all_location_list">All location list:</string>
    <string name="location_name">Location name</string>
    <string name="location_type">Location type</string>
    <string name="location_dimension">Location dimension</string>
    <string name="choose_dimension">Choose dimension</string>
    <string name="location_information">Location information:</string>
    <string name="episode_information">Episode information:</string>
    <string name="all_characters_at_this_location">All characters at this location:</string>

</resources>