<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.character.CharacterFilterFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:text="@string/tvTitleFilter"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_label" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgCharacterStatusFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAlive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alive" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dead" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipUnknown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/gender" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgCharacterGenderFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipGenderFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipGenderMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipGenderGenderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genderless" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipGenderUnknown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown" />

        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/btnFilterCharacterType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/choose_type"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnFilterCharacterSpecies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/choose_species"
            android:textAllCaps="false" />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnApplyFilterCharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/apply" />

</LinearLayout>