<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_screen"
    tools:context=".view.fragments.CharacterDetailsFragment">


    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/round_button"
        android:text="@string/btn_back_text"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCharacterInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_information"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="@+id/btnBack" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/gl_first_begin" />

    <ImageView
        android:id="@+id/ivCharacterImage"
        android:layout_width="@dimen/square_image_150dp"
        android:layout_height="@dimen/square_image_150dp"
        android:layout_margin="@dimen/margin"
        android:src="@drawable/ic_character_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glFirst" />

    <LinearLayout
        android:id="@+id/linearCharacterInformation"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/ivCharacterImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivCharacterImage"
        app:layout_constraintTop_toTopOf="@id/ivCharacterImage">


        <TextView
            android:id="@+id/tvCharacterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:text="@string/character_name" />

        <TextView
            android:id="@+id/tvCharacterStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:text="@string/character_status" />

        <TextView
            android:id="@+id/tvCharacterType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:text="@string/character_type" />

        <TextView
            android:id="@+id/tvCharacterSpecie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:text="@string/character_specie" />

        <TextView
            android:id="@+id/tvCharacterGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:text="@string/character_gender" />

        <TextView
            android:id="@+id/tvCharacterOrigin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:ems="12"
            android:focusable="true"
            android:text="@string/character_origin" />

        <TextView
            android:id="@+id/tvCharacterLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:ems="12"
            android:focusable="true"
            android:text="@string/character_location" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvEpisodesWithCharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/episodes_with_this_character"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/glSecond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCharacterImage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="255dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOnCharacterDetailsFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glSecond"
        tools:listitem="@layout/item_episodes_in_characters"
        tools:orientation="vertical" />

    <ProgressBar
        android:id="@+id/progress_bar_character_details"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:indeterminateTint="@color/yellow"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rvOnCharacterDetailsFragment"
        app:layout_constraintEnd_toEndOf="@+id/rvOnCharacterDetailsFragment"
        app:layout_constraintStart_toStartOf="@+id/rvOnCharacterDetailsFragment"
        app:layout_constraintTop_toTopOf="@+id/rvOnCharacterDetailsFragment" />

</androidx.constraintlayout.widget.ConstraintLayout>