<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_screen"
    tools:context=".view.fragments.location.LocationDetailsFragment">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/btn_back_text"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLocationInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_information"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="@+id/btnBack" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/gl_first_begin" />

    <TextView
        android:id="@+id/tvLocationNameInLocationDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/location_name"
        android:textSize="@dimen/text_size_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glFirst" />

    <TextView
        android:id="@+id/tvLocationTypeInLocationDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/location_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLocationNameInLocationDetails" />

    <TextView
        android:id="@+id/tvLocationDimensionInLocationDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/location_dimension"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLocationTypeInLocationDetails" />

    <TextView
        android:id="@+id/tvAllCharactersInLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:gravity="center"
        android:text="@string/all_characters_at_this_location"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toTopOf="@id/rvLocationDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLocationDimensionInLocationDetails" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLocationDetails"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAllCharactersInLocation"
        app:spanCount="2"
        tools:listitem="@layout/item_characters"
        tools:orientation="vertical" />

    <ProgressBar
        android:id="@+id/pbLocationDetails"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rvLocationDetails"
        app:layout_constraintEnd_toEndOf="@+id/rvLocationDetails"
        app:layout_constraintStart_toStartOf="@+id/rvLocationDetails"
        app:layout_constraintTop_toTopOf="@+id/rvLocationDetails" />


</androidx.constraintlayout.widget.ConstraintLayout>