<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_screen"
    tools:context=".view.fragments.episode.EpisodeDetailsFragment">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/btn_back_text"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEpisodeInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/episode_information"
        android:textSize="@dimen/text_size_label"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="@+id/btnBack" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/gl_first_begin" />

    <TextView
        android:id="@+id/tvEpisodeNameInEpisodeDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:gravity="center"
        android:text="@string/episode_name"
        android:textSize="@dimen/text_size_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glFirst" />

    <TextView
        android:id="@+id/tvEpisodeAirDateInEpisodeDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/air_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEpisodeNameInEpisodeDetails" />

    <TextView
        android:id="@+id/tvEpisodeCodeInEpisodeDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/episode_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEpisodeAirDateInEpisodeDetails" />

    <TextView
        android:id="@+id/tvAllCharactersInEpisode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:gravity="center"
        android:text="@string/all_characters_in_this_episode"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toTopOf="@id/rvEpisodeDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEpisodeCodeInEpisodeDetails" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEpisodeDetails"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAllCharactersInEpisode"
        app:layout_constraintVertical_bias="0.0"
        app:spanCount="2"
        tools:listitem="@layout/item_character"
        tools:orientation="vertical" />

    <ProgressBar
        android:id="@+id/progress_bar_episodes_details"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:indeterminateTint="@color/yellow"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rvEpisodeDetails"
        app:layout_constraintEnd_toEndOf="@+id/rvEpisodeDetails"
        app:layout_constraintStart_toStartOf="@+id/rvEpisodeDetails"
        app:layout_constraintTop_toTopOf="@+id/rvEpisodeDetails" />

</androidx.constraintlayout.widget.ConstraintLayout>