<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/character_card"
    android:layout_width="match_parent"
    android:layout_height="@dimen/square_card_200_dp"
    android:layout_margin="@dimen/margin"
    app:cardCornerRadius="@dimen/radius_card_corner">

        <ImageView
            android:id="@+id/ivCharacterImageInItemCharacter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@drawable/ic_character_placeholder" />

        <LinearLayout
            android:id="@+id/linearCharacterNameInCharacterCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mr_foreground_card_color"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvCharacterNameInItemCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_half"
                android:text="@string/character_name"
                android:textSize="@dimen/text_size_big"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearInCharacterCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mr_foreground_card_color"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <TextView
                android:id="@+id/tvCharacterSpeciesInItemCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin_half"
                android:text="@string/human" />

            <TextView
                android:id="@+id/tvCharacterGenderInItemCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin_mini"
                android:text="@string/character_gender" />


        </LinearLayout>

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            app:layout_constraintBottom_toTopOf="@id/tvCharacterStatusInItemCharacter"
            app:layout_constraintEnd_toEndOf="@id/tvCharacterStatusInItemCharacter"
            app:layout_constraintStart_toStartOf="@id/tvCharacterStatusInItemCharacter"
            app:layout_constraintTop_toTopOf="@id/linearInCharacterCard" />

        <TextView
            android:id="@+id/tvCharacterStatusInItemCharacter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/alive"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toBottomOf="@id/linearInCharacterCard"
            app:layout_constraintEnd_toEndOf="@id/linearInCharacterCard"
            app:layout_constraintTop_toBottomOf="@id/tvStatus" />


</androidx.constraintlayout.widget.ConstraintLayout>