<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_half"
    app:cardCornerRadius="@dimen/radius_card_corner">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:alpha="0.7"
        android:scaleType="centerCrop"
        android:src="@drawable/image_for_episode_card_2" />


    <LinearLayout
        android:id="@+id/linearEpisodeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ellipsize="end"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvEpisodeCodeInCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_mini"
            android:textColor="@color/mr_black_text_color"
            android:text="@string/episode_code" />

        <TextView
            android:id="@+id/tvEpisodeNameInCard"
            android:layout_width="wrap_content"
            android:maxLines="3"
            android:gravity="center"
            android:maxWidth="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/mr_black_text_color"
            android:textSize="@dimen/text_size_normal"
            android:text="@string/episode_name" />

        <TextView
            android:id="@+id/tvEpisodeAirDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mr_black_text_color"
            android:textSize="@dimen/text_size_small"
            android:text="@string/air_date" />

    </LinearLayout>


</androidx.cardview.widget.CardView>